--- a/package.json
+++ b/package.json
@@ -13,6 +13,14 @@
     "bookmark",
     "favourite"
   ],
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/skchawala/bookmark-desktop-app"
+  },
+  "homepage": "https://github.com/skchawala/bookmark-desktop-app/blob/master/README.md",
+  "bugs": {
+    "url" : "https://github.com/skchawala/bookmark-desktop-app/issues"
+  },
   "author": "Satish Kumar",
   "license": "ISC",
   "devDependencies": {
