--- a/package.json
+++ b/package.json
@@ -14,17 +14,18 @@
     "favourite"
   ],
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/skchawala/bookmark-desktop-app"
+    "type": "git",
+    "url": "https://github.com/skchawala/bookmark-desktop-app"
   },
   "homepage": "https://github.com/skchawala/bookmark-desktop-app/blob/master/README.md",
   "bugs": {
-    "url" : "https://github.com/skchawala/bookmark-desktop-app/issues"
+    "url": "https://github.com/skchawala/bookmark-desktop-app/issues"
   },
   "author": "Satish Kumar",
   "license": "ISC",
   "devDependencies": {
-    "electron": "9.0.0"
+    "electron": "9.0.0",
+    "electron-builder": "22.10.5"
   },
   "dependencies": {
     "electron-window-state": "5.0.3",
