--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bookmark-desktop-app",
+  "name": "BookmarkDesktopApp",
   "version": "1.0.0",
-  "description": "Bookmark you favourite sites",
+  "description": "Bookmark you favourite sites and read",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -31,5 +31,19 @@
   "dependencies": {
     "electron-window-state": "5.0.3",
     "nodemon": "2.0.7"
+  },
+  "build": {
+    "appId": "com.bookmarkDesktopApp.app",
+    "copyright": "Copyright bookmarkDesktopApp",
+    "mac": {
+      "category": "public.app-category.productivity",
+       "target": "dmg"
+    },
+    "win": {
+      "target": "zip"
+    },
+    "linux": {
+      "category": "Utility"
+    }
   }
 }
