--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron .",
     "watch": "nodemon --exec electron .",
-    "build": "electron-builder"
+    "build": "electron-builder",
+    "release": "electron-builder -mwl -p 'onTagOrDraft'"
   },
   "keywords": [
     "websites",
@@ -36,8 +37,7 @@
     "appId": "com.bookmarkDesktopApp.app",
     "copyright": "Copyright bookmarkDesktopApp",
     "mac": {
-      "category": "public.app-category.productivity",
-       "target": "dmg"
+      "category": "public.app-category.productivity"
     },
     "win": {
       "target": "zip"
